--- a/android/build.gradle
+++ b/android/build.gradle
@@ -21,6 +21,8 @@ android {
         applicationId "xyz.charliezhang.starstream"
         minSdkVersion 9
         targetSdkVersion 23
+        versionCode 2
+        versionName "1.1"
     }
 }
 
